# map-rs

./: .gitignore  API_DOCUMENTATION.md  Cargo.toml  DETAILED_API_DOCS.md  FILE_STRUCTURE.md  LICENSE  README.md
.github/workflows/: label.yml  rust.yml
assets/shaders/: full_screen_pass.wgsl  old_monitor.wgsl
src/: camera.rs  debug.rs  interaction.rs  main.rs  settings.rs
src/apis/: NOTE  openmeteo.rs
src/apis/environmental/: europa.rs  landcover.rs  overpass.rs
src/apis/weather/: earthdata.rs  nws.rs  openmeteo.rs
src/geojson/: loader.rs  mod.rs  overpass.rs  renderer.rs  shapes_plugin.rs  types.rs
src/llm/: client.rs  mod.rs  openrouter_types.rs
src/overpass/: client.rs  mod.rs  overpass.rs  overpass_plugin.rs  overpass_types.rs  worker.rs
src/storage/: WORK ON ME NEXT WITH URGRANCY
src/tiles/: mod.rs  ofm_api.rs  tile_map.rs  ui.rs
src/tools/: feature_picker.rs  location.rs  measure.rs  mod.rs  pin.rs  selection.rs  tool.rs  ui.rs  work_space_selector.rs
src/types/: geojson_types.rs  mod.rs  overpass_types.rs  tile.rs  workspace_types.rs
src/workspace/: commands.rs  mod.rs  renderer.rs  ui.rs  worker.rs  workspace_data.rs  workspace_types.rs
