[package]
name = "map-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.1"
bevy_ecs_tilemap = "0.15.0"
bevy_pancam = "0.17.0"
crossbeam-channel = "0.5.14"
mvt-reader = "1.6.0"
geo = "0.29.3"
raqote = "0.8.5"
rstar = "0.12.2"
ureq = "2.12.1"
image = "0.25.5"
bevy_egui = "0.33.0"
serde = "1.0.217"
serde_json = "1.0.134"
geojson = "0.24.1"
bevy_prototype_lyon = "0.13.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false