[package]
name = "map-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_pancam = "0.18.0"
crossbeam-channel = "0.5.15"
geo = "0.30.0"
rstar = "0.12.2"
ureq = "3.0.11"
bevy_egui = "0.34.1"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
serde = "1.0.219"
serde_json = "1.0.140"
geojson = "0.24.2"
bevy_tasks = "0.16.0"
uuid = "1.12.0"
chrono = "0.4.40"
bevy_map_viewer = { git = "https://github.com/SO9010/bevy-map-viewer.git" }
openmeteo-rs-ureq = { git = "https://github.com/SO9010/openmeteo-rs-ureq.git"}
winit = "0.30.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"
codegen-units = 1
strip = "debuginfo"
incremental = false
debug = false
